Fixed icon mobile responsive and changed header in recipe div.

--- a/stylesheets/recipes.css
+++ b/stylesheets/recipes.css
@@ -14,6 +14,13 @@
 
 }
 
+.food-label {
+    background-color:black;
+    color: #B2E0E6;
+    width: 100%;
+    
+}
+
 /* ////////// The Nutrient Table ////////// */
 
 .nutrient-table {
